Update PatentRadar link to patentradar.app

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ const projects = [
   {
     title: 'PatentRadar',
     description: 'iOS app for discovering and licensing government patents for commercialization.',
-    href: 'https://github.com/riorio3/PatentRadar',
+    href: 'https://patentradar.app/',
     size: 'md' as const,
   },
   {
